# flash

./: .gitattributes  .gitignore  Cargo.toml  ENVIRONMENT_IMPROVEMENTS.md  Makefile  README.md  demo_environment.sh  rust-toolchain.toml  test_alias_debug.rs  test_case_functionality.sh  test_ctrl_c.sh  test_debug.rs  test_export.sh  test_flashrc.txt  test_flashrc_fixed.txt  test_if_functionality.sh  test_interactive.txt  test_lexer_debug.sh  test_select.sh
.cargo/: release.toml
.github/workflows/: test.yml
benches/: flash_benchmarks.rs
docs/: Cargo.toml  README.md  index.html
docs/pkg/: README.md  flash_wasm_demo.d.ts  flash_wasm_demo.js  flash_wasm_demo_bg.wasm  flash_wasm_demo_bg.wasm.d.ts  package.json
docs/src/: lib.rs
examples/: environment_demo.rs  interop.rs  parse_pkgbuild.rs
src/: bin.rs  completion.rs  environment_integration.rs  formatter.rs  interpreter.rs  lexer.rs  lexer_simd.rs  lib.rs  parser.rs  simd.rs
src/flash/: env.rs  mod.rs
tests/: advanced_features_tests.rs  arithmetic_tests.rs  completion_tests.rs  comprehensive_features_tests.rs  critical_features_tests.rs  environment_tests.rs  formatter_tests.rs  function_tests.rs  integration_tests.rs  lexer_tests.rs  parser_tests.rs
