[package]
name = "mystsh"
version = "0.0.1"
edition = "2024"
description = "Mystical shell parser, formatter, and interpreter with Bash support"
license = "GPL-3.0-or-later"

[lib]
name = "mystsh"
path = "src/lib.rs"

[[bin]]
name = "myst"
path = "src/bin.rs"

[features]
default = ["formatter", "interpreter"]
formatter = []
interpreter = ["os_pipe", "libc"]

[dependencies]
os_pipe = { version = "1.2.1", optional = true }
libc = { version = "0.2.172", optional = true }