[package]
name = "flash"
version = "0.0.4"
edition = "2024"
description = "Shell parser, formatter, and interpreter with Bash support"
license = "GPL-3.0-or-later"
include = ["/src", "LICENSE", "README.md"]

[lib]
name = "flash"
path = "src/lib.rs"

[[bin]]
name = "flash"
path = "src/bin.rs"

[features]
default = ["formatter", "interpreter"]
formatter = []
interpreter = ["regex", "termios", "libc"]

[dependencies]
termios = { version = "0.3.3", optional = true }
regex = { version = "1.11.1", optional = true }
libc = { version = "0.2", optional = true }

[dev-dependencies]
tempfile = "3.19.1"
pretty_assertions = "1.4.1"
criterion = { version = "0.5", features = ["html_reports"] }

# We use `opt-level = "s"` as it significantly reduces binary size.
[profile.release]
codegen-units = 1           # reduces binary size by ~2%
debug = "full"              # No one needs an undebuggable release binary
lto = true                  # reduces binary size by ~14%
opt-level = "s"             # reduces binary size by ~25%
panic = "abort"             # reduces binary size by ~50% in combination with -Zbuild-std-features=panic_immediate_abort
split-debuginfo = "packed"  # generates a separate *.dwp/*.dSYM so the binary can get stripped
strip = "symbols"           # See split-debuginfo - allows us to drop the size by ~65%

[profile.dev]
split-debuginfo = "unpacked"
lto = false
incremental = true
opt-level = 0

[[bench]]
name = "flash_benchmarks"
harness = false